# cqlalchemy

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.md
scripts/: lint  modify_classes.sh  publish.sh  setup.sh  test  update.sh
src/cqlalchemy/: skeleton.py
src/cqlalchemy/scaffold/: build.py  extension.py
src/cqlalchemy/scaffold/templates/: enum.template  extension.template  pyproject.toml.template  query.template
src/cqlalchemy/scripts/: generate.py  main.py
src/cqlalchemy/stac/: query.py
tests/: conftest.py  test_scaffold.py  test_skeleton.py  test_stac_query_block.py  test_umbra.py
tests/test_data/: eo.py.txt  extension_list.txt  ignore_fields.txt  landsat.py.txt  mlm.py.txt  planet.py.txt  planet.schema.json  query_1.py  query_1_definition.json  query_2.py  query_2_definition.json  query_definition.json  query_extension_list.txt  sample_definition.json  sample_extension_list.txt  sar.py.txt  sat.py.txt  view.py.txt
