[tool.poetry]
name = "cqlalchemy"
version = "0.1.0"
description = "library for constructing cql2-json queries and for generating libraries with multiple STAC extensions\""
authors = ["David Raleigh <davidraleigh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
shapely = "^2.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pyright = "^1.1.388"
ruff = "^0.7.3"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]
namespaces = true

[project.readme]
file = "README.md"
content-type = "text/markdown; charset=UTF-8; variant=GFM"

[tool.flake8]
max-line-length = 120
